Adding new files

--- a/config.json
+++ b/config.json
@@ -7,8 +7,9 @@
         "fb_url":"https://facebook.com/coding_things",
         "x_url":"https://x.com/coding_things",
         "gh_url":"https://github.com/coding_things",
-        "blog_name":"The Coding Things",
-        "tag_line":"A Blog liked by Blog's users."
+        "blog_name":"QuillNest",
+        "tag_line":"A Blog liked by Blog's users.",
+        "about_text": "Welcome to QuillNest, where creativity takes flight! At QuillNest, we're not just a team; we're a vibrant community of writers, thinkers, and creators united by the love of words. Our platform is more than a space to pen thoughts - it's a nurturing environment where ideas flourish, stories blossom, and connections thrive. From seasoned wordsmiths to budding authors, QuillNest is a haven for all. Join us on this literary journey, where the power of storytelling knows no bounds. Together, we're building a community that celebrates the beauty of expression and the joy of shared narratives. Welcome to QuillNest - where your words find wings!"
 
     }
 }
