--- a/config.json
+++ b/config.json
@@ -10,7 +10,10 @@
         "blog_name":"QuillNest",
         "tag_line":"Fostering a tapestry of tales, uniting a global community through the art of storytelling.",
         "about_text": "Welcome to QuillNest, where creativity takes flight! At QuillNest, we're not just a team; we're a vibrant community of writers, thinkers, and creators united by the love of words. Our platform is more than a space to pen thoughts - it's a nurturing environment where ideas flourish, stories blossom, and connections thrive. From seasoned wordsmiths to budding authors, QuillNest is a haven for all. Join us on this literary journey, where the power of storytelling knows no bounds. Together, we're building a community that celebrates the beauty of expression and the joy of shared narratives. Welcome to QuillNest - where your words find wings!",
-        "no_of_posts": 5
+        "no_of_posts": 5,
+        "login_image":"login.svg",
+        "admin_user":"shubham",
+        "admin_password":"jinja"
 
     }
 }
